# sort-algorithms

./: pyproject.toml
sort_algorithms/: insertion.py  selection.py
tests/: test_insertion_sort.py  test_selection_sort.py  test_sort_algorithms.py
