[tool.poetry]
name = "sort-algorithms"
version = "0.1.0"
description = ""
authors = ["JoseCarlosNF <josecarlos.n.f99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
